--- a/app/src/main/res/layout/activity_vipqiandao.xml
+++ b/app/src/main/res/layout/activity_vipqiandao.xml
@@ -87,7 +87,39 @@
             android:layout_alignParentBottom="true"
             android:background="@color/viewcolor"></View>
     </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40.5dp"
+        android:background="@color/white"
+        >
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:text="卡面号码"
+            android:textColor="@color/text_30"
+            android:textSize="15sp"
+            />
+
+        <TextView
+            android:id="@+id/vip_tv_kamcard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/text_30"
+            android:textSize="15sp"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/viewcolor"
+            android:layout_alignParentBottom="true"
+            ></View>
+    </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
