--- a/app/src/main/res/layout/item_duihuanjilu.xml
+++ b/app/src/main/res/layout/item_duihuanjilu.xml
@@ -1,71 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="35dp"
-    android:orientation="horizontal"
-    android:background="@color/white"
-    android:gravity="center_vertical"
-    >
-    <TextView
-        android:id="@+id/tv_vipcard"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_30"
-        android:textSize="13sp"
-        android:gravity="center"
-        android:text="会员卡号"
-        />
-<View
-    android:layout_width="1dp"
-    android:layout_height="match_parent"
-    android:background="@color/viewcolor"
-    ></View>
-    <TextView
-        android:id="@+id/tv_num"
-        android:visibility="gone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_30"
-        android:textSize="13sp"
-        android:gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="兑换数量"
-        />
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        android:background="@color/viewcolor"
-        ></View>
-    <TextView
-        android:id="@+id/tv_jifen"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_30"
-        android:textSize="13sp"
-        android:gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:text="消耗积分"
-        />
-    <View
-        android:layout_width="1dp"
-        android:layout_height="match_parent"
-        android:background="@color/viewcolor"
-        ></View>
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/text_30"
-        android:textSize="13sp"
-        android:gravity="center"
-        android:text="审核时间"
-        />
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/tv_vipcard"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="会员卡号"
+            android:textColor="@color/text_30"
+            android:textSize="13sp"
+            />
+
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:background="@color/viewcolor"
+            ></View>
+        <TextView
+            android:id="@+id/vip_tv_kamcard"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="卡面号码"
+            android:textColor="@color/text_30"
+            android:textSize="13sp"
+            />
+
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:background="@color/viewcolor"
+            ></View>
+        <TextView
+            android:id="@+id/tv_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text="兑换数量"
+            android:textColor="@color/text_30"
+            android:textSize="13sp"
+            android:visibility="gone"
+            />
+
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:background="@color/viewcolor"
+            android:visibility="gone"
+            ></View>
+
+        <TextView
+            android:id="@+id/tv_jifen"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:gravity="center"
+            android:text="消耗积分"
+            android:textColor="@color/text_30"
+            android:textSize="13sp"
+            />
+
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:background="@color/viewcolor"
+            ></View>
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="审核时间"
+            android:textColor="@color/text_30"
+            android:textSize="13sp"
+            />
+
+    </LinearLayout>
 </LinearLayout>
