--- a/app/src/main/res/layout/item_xiaofeijilu.xml
+++ b/app/src/main/res/layout/item_xiaofeijilu.xml
@@ -21,7 +21,7 @@
         android:text="订单编号"
         />
 <View
-    android:layout_width="1dp"
+    android:layout_width="0.5dp"
     android:layout_height="match_parent"
     android:background="@color/viewcolor"
     ></View>
@@ -39,7 +39,7 @@
 </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
         android:background="@color/viewcolor"
         ></View>
     <LinearLayout
@@ -60,7 +60,7 @@
         android:text="会员卡号"
         />
     <View
-        android:layout_width="1dp"
+        android:layout_width="0.5dp"
         android:layout_height="match_parent"
         android:background="@color/viewcolor"
         ></View>
@@ -78,7 +78,46 @@
 </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
+        android:background="@color/viewcolor"
+        ></View>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_30"
+            android:textSize="15sp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:gravity="center_vertical"
+            android:text="卡面号码"
+            />
+        <View
+            android:layout_width="0.5dp"
+            android:layout_height="match_parent"
+            android:background="@color/viewcolor"
+            ></View>
+        <TextView
+            android:id="@+id/vip_tv_kamcard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_30"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:text="1111111111"
+            />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
         android:background="@color/viewcolor"
         ></View>
     <LinearLayout
@@ -99,7 +138,7 @@
             android:text="会员姓名"
             />
         <View
-            android:layout_width="1dp"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="@color/viewcolor"
             ></View>
@@ -117,7 +156,7 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
         android:background="@color/viewcolor"
         ></View>
     <LinearLayout
@@ -139,7 +178,7 @@
             android:text="订单状态"
             />
         <View
-            android:layout_width="1dp"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="@color/viewcolor"
             ></View>
@@ -157,7 +196,7 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
         android:visibility="gone"
         android:background="@color/viewcolor"
         ></View>
@@ -179,7 +218,7 @@
             android:text="订单类型"
             />
         <View
-            android:layout_width="1dp"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="@color/viewcolor"
             ></View>
@@ -197,7 +236,7 @@
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
+        android:layout_height="0.5dp"
         android:background="@color/viewcolor"
         ></View>
 
@@ -221,7 +260,7 @@
             />
         <View
             android:id="@+id/vvvvvv"
-            android:layout_width="1dp"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="@color/viewcolor"
             android:layout_toRightOf="@id/tv_zzzz"
